Fix z-index of QfG3 toolbar
Reduce z-index of QfG3 toolbar so that it does not cover date/time box.

--- a/qfg3_stylesheet.css
+++ b/qfg3_stylesheet.css
@@ -457,7 +457,7 @@ footer {
 	position: absolute; 
 	top: 0; 
 	left: 3%; 
-	z-index: 16; 
+	z-index: 2; 
 }
 h1 {
 	font-size: 3.5em; 
@@ -580,7 +580,7 @@ footer {
 	position: absolute; 
 	top: 0; 
 	left: 16%; 
-	z-index: 16; 
+	z-index: 2; 
 }
 h1 {
 	font-size: 3.5em;
@@ -712,7 +712,7 @@ footer {
 	position: absolute; 
 	top: 0; 
 	left: 16%; 
-	z-index: 16; 
+	z-index: 2; 
 }
 h1 {
 	font-size: 4.5em; 
@@ -849,7 +849,7 @@ footer {
 	position: absolute; 
 	top: 0; 
 	left: 12%; 
-	z-index: 16; 
+	z-index: 2; 
 }
 h1 {
 	font-size: 5.5em; 
@@ -984,7 +984,7 @@ footer {
 	position: absolute; 
 	top: 0; 
 	left: 13%; 
-	z-index: 16; 
+	z-index: 2; 
 }
 h1 {
     font-size: 6.0em;  
